public/stylesheets/followers.css
.profile-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    border: 2px solid orange;
    border-radius: 10px;
    padding: 20px;
    width: 250px;
  }
  h2{
    color: white;
  }
  .profile-wrapper{
    display: flex;
    flex-flow: row wrap;
    gap: 30px;
  /* align-content: space-between; */
  /* justify-content: space-evenly; */
  }
  
  .profile-image {
    border-radius: 50%;
    width: 100px;
    height: 100px;
    object-fit: cover;
  }
  
  .profile-name {
    margin-top: 10px;
    font-size: 24px;
  }
  
  .follow-button {
    margin-top: 20px;
    background-color: orange;
    color: white;
    border: none;
    border-radius: 5px;
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
    transition: all 0.3s ease;
  }
  
  .follow-button:hover {
    background-color: white;
    color: orange;
  }
  

